--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.24.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
