--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -29,6 +30,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
